[package]
name = "brainfuck"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "interpreter"
path = "src/main_interpreter.rs"

[[bin]]
name = "ir"
path = "src/main_ir.rs"

[[bin]]
name = "compiler"
path = "src/main_jit.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
rand = "0.8.4"
dynasm = "2.0"
dynasmrt = "2.0"